<resources>
    <string name="app_name">Travel Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Travel Planner</string>
    <string name="nav_header_subtitle">username placeholder</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">ActionSettings</string>

<!--Menus-->
    <string name="menu_home">Home</string>
    <string name="menu_itinerary">Itinerary</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>


<!--Trip strings-->
    <string name="upcoming_trips">Upcoming trip</string>
    <string name="add_trip">Add trip</string>
    <string name="destination">-Destination:</string>
    <string name="hotel_address">-Hotel Address:</string>
    <string name="city_country">-City/Country:</string>
    <string name="start_date">-Start date:</string>
    <string name="end_date">-End date:</string>
    <string name="transportation">-Mode of transportation:</string>

    <string name="pre_trip_checklist">Pre-Trip Checklist</string>
    <string name="add_pre_trip_checklist">Add Pre-Trip Checklist</string>
    <string name="hotel_reserved">-Hotel reserved?</string>
    <string name="transport_booked">-Transportation booked?</string>
    <string name="passport_valid">-Passport valid?</string>
    <string name="visa_required">-Visa required?</string>
    <string name="shopping_list">-Shopping list?</string>

    <string name="luggage">Luggage</string>
    <string name="add_luggage_info">Add Luggage Information</string>
    <string name="bag_owner">-Bag owner:</string>
    <string name="bag_brand">-Brand:</string>
    <string name="bag_weight">-Weight:</string>
    <string name="bag_dimensions">-Dimensions:</string>
    <string name="bag_color">-Color:</string>

    <string name="activity">Activity</string>
    <string name="activities">Activities</string>
    <string name="activity_details">Activity Details</string>
    <string name="add_activity">Add Activity</string>
    <string name="activity_name">-Name of activity:</string>
    <string name="activity_location">-Location:</string>
    <string name="activity_start_date">-Start date:</string>
    <string name="activity_start_time">-Start time:</string>
    <string name="activity_end_date">-End date:</string>
    <string name="activity_end_time">-End time:</string>
    <string name="upcoming_activities">-Upcoming activities</string>

    <string name="select_itin">Select itinerary</string>
    <string name="select_details">What do you wish to view?</string>
    <string name="trip_details">Trip details</string>
    <string name="pre_trip_check">Pre-trip checklist</string>
    <string name="luggage_details">Luggage</string>
    <string name="todo">To-do</string>


<!--Icons/images/symbols-->
    <string name="star">Star image</string>
    <string name="placeholder">Placeholder image</string>
    <string name="button">Button</string>

<!--Settings-->
    <string name="Settings">Settings</string>
    <string name="Account" />
    <string name="Log">Log out</string>
    <string name="AccountButton">Account</string>
    <string name="ReminderNotifButton" />
    <string name="RemindersNotifsButton">Reminders/\nNotifications</string>
    <string name="LogOutButton">Log out?</string>
    <string name="accountInfo">"Account Information: "</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="phoneNum">"Phone #: "</string>
    <string name="update">Update Account Information?</string>
    <string name="changePassword">Change Password?</string>
    <string name="loggedout">Would you like the log out?</string>
    <string name="backtologin">You will be redirected to the login screen</string>
    <string name="reminders_notifs">Reminders/Notifications</string>
    <string name="enableReminders">Enable Reminders?</string>
    <string name="setReminders">"Set Reminders for:\n\t-Upcoming trip date\n\t-Activities "</string>

<!--General strings-->
    <string name="will_add">Will add a checklist with the following trackers</string>
    <string name="enter_information">Enter information here:</string>
    <string name="add_trip_btn">Add trip</string>
    <string name="done_btn">Done</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="user_input">user input</string>
    <string name="gen_placeholder">Generic placeholder</string>
    <string name="loc_placeholder">Location placeholder</string>
    <string name="date_placeholder">Date placeholder</string>
    <string name="act_placeholder">Activity placeholder</string>
    <string name="rem_placeholder">Reminder placeholder</string>
    <string name="reminder">Reminders</string>
    <string name="what_to_add">What do you wish to add?</string>
    <string name="hint_enter_address" />
    <string name="hint_street_address" />
    <string name="hint_city" />
    <string name="hint_state" />
    <string name="hint_postal_code" />
    <string name="btn_enter" />
    <string name="map_navigation" />

</resources>