<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_itinerary"
            android:icon="@drawable/itinerary"
            android:title="@string/menu_itinerary" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
</menu>