<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_enter_address"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_street_address"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_city"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_state"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_postal_code"
        android:inputType="number"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enter"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:background="@color/dark_blue"
        android:textColor="@android:color/white"
        android:padding="12dp"/>

</LinearLayout>
