<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="LabelFor">

    <ImageButton
        android:id="@+id/back_add_luggage"
        android:layout_width="84dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/dark_blue"
        android:contentDescription="@string/back_btn"
        android:scaleType="fitCenter"
        android:src="@drawable/back_arrow"
        android:translationZ="90dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addLuggage"
        android:layout_width="281dp"
        android:layout_height="82dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/add_luggage_info"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <TextView
        android:id="@+id/bagOwner"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:text="@string/bag_owner"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLuggage" />

    <EditText
        android:id="@+id/ans_owner"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:hint="@string/enter_information"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bagOwner" />

    <TextView
        android:id="@+id/bagBrand"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/bag_brand"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans_owner" />

    <EditText
        android:id="@+id/ans_brand"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:hint="@string/enter_information"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bagBrand" />

    <TextView
        android:id="@+id/bagWeight"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/bag_weight"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans_brand" />

    <EditText
        android:id="@+id/ans_weight"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:hint="@string/enter_information"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bagWeight"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/bagDimensions"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:text="@string/bag_dimensions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans_weight" />

    <EditText
        android:id="@+id/ans_dimen"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:hint="@string/enter_information"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bagDimensions" />

    <TextView
        android:id="@+id/bagColor"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/bag_color"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans_dimen" />

    <EditText
        android:id="@+id/ans_color"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:hint="@string/enter_information"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bagColor" />

    <Button
        android:id="@+id/done_add_luggage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/aqua"
        android:contentDescription="@string/next_btn"
        android:gravity="center_horizontal"
        android:text="@string/done_btn"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/bot_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans_color" />

    <TextView
        android:id="@+id/bot_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>